# permanence-dao-services

./: Cargo.toml  README.md
_archive/: archive_topic.py
_config/: base.toml
_config/env/: production.toml
_metadata/: get-metadata.sh  kusama-metadata.scale  polkadot-metadata.scale
_migrations/: .env.sample
_migrations/migrations/: 20241205090334_network.down.sql  20241205090334_network.up.sql  20241205090456_referendum.down.sql  20241205090456_referendum.up.sql  20250205092503_vote.down.sql  20250205092503_vote.up.sql  20250221115919_member.down.sql  20250221115919_member.up.sql  20250320142009_settings.down.sql  20250320142009_settings.up.sql  20250412145110_member_vote.down.sql  20250412145110_member_vote.up.sql  20250512131706_member_leave.down.sql  20250512131706_member_leave.up.sql  20250512131708_member_return.down.sql  20250512131708_member_return.up.sql  20251005200922_pending_member_vote.down.sql  20251005200922_pending_member_vote.up.sql
_scripts/: reset-db.sh
pdao-config/: Cargo.toml
pdao-config/src/: lib.rs
pdao-logging/: Cargo.toml
pdao-logging/src/: lib.rs
pdao-metrics/: Cargo.toml
pdao-metrics/src/: server.rs
pdao-openai-client/: Cargo.toml
pdao-openai-client/src/: lib.rs
pdao-opensquare-client/: Cargo.toml
pdao-opensquare-client/src/: lib.rs
pdao-persistence/: Cargo.toml
pdao-persistence/src/: lib.rs
pdao-persistence/src/postgres/: member.rs  mod.rs  referendum.rs  settings.rs  vote.rs
pdao-referendum-importer/: Cargo.toml
pdao-referendum-importer/src/: lib.rs
pdao-service/: Cargo.toml
pdao-service/src/: err.rs  lib.rs
pdao-subsquare-client/: Cargo.toml
pdao-subsquare-client/src/: lib.rs
pdao-substrate-client/: Cargo.toml
pdao-substrate-client/src/: lib.rs  storage_utility.rs
pdao-telegram-bot/: Cargo.toml  README.md
pdao-telegram-bot/src/: lib.rs  main.rs  metrics.rs
pdao-telegram-bot/src/command/: archive.rs  coi.rs  feedback_summary.rs  force_vote.rs  import.rs  mark_leave.rs  mark_return.rs  member_list.rs  mod.rs  notify.rs  remove_vote.rs  status.rs  terminate.rs  util.rs  vote.rs
pdao-telegram-client/: Cargo.toml
pdao-telegram-client/src/: lib.rs
pdao-types/: Cargo.toml
pdao-types/src/: lib.rs
pdao-types/src/governance/: mod.rs  opensquare.rs  policy.rs  subsquare.rs  track.rs
pdao-types/src/openai/: mod.rs
pdao-types/src/substrate/: chain.rs  mod.rs  referendum.rs
pdao-voter/: Cargo.toml
pdao-voter/src/: lib.rs  main.rs  metrics.rs
pdao-voter/src/preimage/: kusama.rs  polkadot.rs
pdao-voter/src/referenda/: kusama.rs  polkadot.rs
pdao-voter/src/remove_vote/: kusama.rs  mod.rs  polkadot.rs
pdao-voter/src/vote/: kusama.rs  polkadot.rs
