[workspace]
members = [
    "pdao-config",
    "pdao-logging",
    "pdao-metrics",
    "pdao-openai-client",
    "pdao-opensquare-client",
    "pdao-persistence",
    "pdao-referendum-importer",
    "pdao-service",
    "pdao-substrate-client",
    "pdao-subsquare-client",
    "pdao-telegram-bot",
    "pdao-telegram-client",
    "pdao-types",
    "pdao-voter",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.8"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
config = "0.15"
env_logger = "0.11"
frame-support = "39.0"
frame-metadata = "18"
frankenstein = { version = "0.39", default-features = false, features = ["client-reqwest"] }
hex = "0.4"
jsonrpsee = "0.24"
jsonrpsee-core = "0.24"
lazy_static = "1.5"
log = "0.4"
num-ordinal = "0.2"
num2words = "1.2"
once_cell = "1"
prometheus = "0.13"
reqwest = "0.12"
rustc-hash = "2.0"
serde = "1"
serde_json = "1"
sp-core = "35.0"
sqlx = "0.8"
subxt = "0.39"
subxt-signer = "0.39"
thiserror = "2"
tokio = "1.41"