[workspace.package]
version = "0.1.14"
rust-version = "1.83.0"
edition = "2021"
description = "Permanence DAO Governance Infrastructure"
repository = "https://github.com/permanence-dao/permanence-dao-services"
authors = ["kukabi <kutsal@helikon.io>"]
license = "GPL-3"

[workspace]
members = [
    "pdao-config",
    "pdao-logging",
    "pdao-metrics",
    "pdao-openai-client",
    "pdao-opensquare-client",
    "pdao-persistence",
    "pdao-referendum-importer",
    "pdao-service",
    "pdao-substrate-client",
    "pdao-subsquare-client",
    "pdao-telegram-bot",
    "pdao-telegram-client",
    "pdao-types",
    "pdao-voter",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.11"
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
config = "0.15"
env_logger = "0.11"
frame-support = "43.0"
frame-metadata = "23.0"
frame-system = "43.0"
frankenstein = { version = "0.45", default-features = false, features = ["client-reqwest"] }
hex = "0.4"
jsonrpsee = "0.26"
jsonrpsee-core = "0.26"
lazy_static = "1.5"
log = "0.4"
num-ordinal = "0.2"
once_cell = "1"
pallet-balances = "44.0"
pallet-identity = "43.0"
parity-scale-codec = "3.7"
prometheus = "0.14"
reqwest = "0.12"
rustc-hash = "2.1"
serde = "1"
serde_json = "1"
sp-core = "38.0"
sqlx = "0.8"
strum = "0.27"
strum_macros = "0.27"
subxt = "0.43"
subxt-signer = "0.43"
thiserror = "2"
tokio = "1.47"