[package]
name = "pdao-logging"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
env_logger = { workspace = true }
pdao-config = { path = "../pdao-config" }
log = { workspace = true }