[package]
name = "pdao-metrics"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }