[package]
name = "pdao-openai-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
reqwest = { workspace = true, features = ["blocking", "json", "gzip", "brotli"] }
serde_json = { workspace = true }