[package]
name = "pdao-opensquare-client"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
hex = "0.4"
log = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
serde_json = { workspace = true }
sp-core = { workspace = true }