[package]
name = "pdao-opensquare-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
reqwest = { workspace = true, features = ["blocking", "json", "gzip", "brotli"] }
serde_json = { workspace = true }
sp-core = { workspace = true }