[package]
name = "pdao-persistence"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
lazy_static = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono"] }