[package]
name = "pdao-persistence"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
lazy_static = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono"] }