[package]
name = "pdao-referendum-importer"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-opensquare-client = { path = "../pdao-opensquare-client" }
pdao-persistence = { path = "../pdao-persistence" }
pdao-subsquare-client = { path = "../pdao-subsquare-client" }
pdao-telegram-client = { path = "../pdao-telegram-client" }
pdao-types = { path = "../pdao-types" }
log = { workspace = true }
thiserror = { workspace = true }
