[package]
name = "pdao-service"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-logging = { path = "../pdao-logging" }
pdao-metrics = { path = "../pdao-metrics" }
pdao-types = { path = "../pdao-types" }
tokio = { workspace = true, features = ["full"] }