[package]
name = "pdao-subsquare-client"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, default-features = true, features = ["serde"] }
hex = { workspace = true }
log = { workspace = true }
num2words = { workspace = true }
num-ordinal = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
serde_json = { workspace = true }
sp-core = { workspace = true }