[package]
name = "pdao-subsquare-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, default-features = true, features = ["serde"] }
hex = { workspace = true }
log = { workspace = true }
num2words = { workspace = true }
num-ordinal = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
reqwest = { workspace = true, features = ["blocking", "json", "gzip", "brotli"] }
serde_json = { workspace = true }
sp-core = { workspace = true }