[package]
name = "pdao-substrate-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
frame-metadata = { workspace = true, features = ["default"] }
pdao-types = { path = "../pdao-types" }
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["full"] }
jsonrpsee-core = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
rustc-hash = { workspace = true }
sp-core = { workspace = true }