[package]
name = "pdao-telegram-client"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = { workspace = true }
frankenstein = { workspace = true }
html-escape = "0.2.13"
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
log = { workspace = true }