[package]
name = "pdao-telegram-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
frankenstein = { workspace = true }
html-escape = "0.2"
pdao-config = { path = "../pdao-config" }
pdao-types = { path = "../pdao-types" }
log = { workspace = true }