[package]
name = "pdao-types"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, default-features = true, features = ["serde"] }
enum-iterator = "2.0"
frame-support = { workspace = true }
hex = { workspace = true }
pallet-identity = "40.1"
parity-scale-codec = { workspace = true }
pallet-balances = "41.1"
pdao-config = { path = "../pdao-config" }
frame-system = "40.1"
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
thiserror = { workspace = true }