[package]
name = "pdao-types"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, default-features = true, features = ["serde"] }
enum-iterator = "2.1"
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { workspace = true }
pallet-balances = { workspace = true }
pallet-identity = { workspace = true }
parity-scale-codec = { workspace = true }
pdao-config = { path = "../pdao-config" }
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
thiserror = { workspace = true }