[package]
name = "pdao-voter"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"
authors = ["kukabi <kutsal@helikon.io>"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
pdao-config = { path = "../pdao-config" }
subxt = "0.38.0"
tokio = { workspace = true, features = ["full"] }
