[package]
name = "pdao-voter"
version = "0.1.4"
edition = "2021"
rust-version = "1.77.2"
authors = ["kukabi <kutsal@helikon.io>"]

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-substrate-client = { path = "../pdao-substrate-client" }
pdao-types = { path = "../pdao-types" }
subxt = { workspace = true }
subxt-signer = { workspace = true }