[package]
name = "pdao-voter"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
pdao-config = { path = "../pdao-config" }
pdao-substrate-client = { path = "../pdao-substrate-client" }
pdao-types = { path = "../pdao-types" }
subxt = { workspace = true }
subxt-signer = { workspace = true }